--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
         "vlucas/phpdotenv": "^5.5",
         "doctrine/dbal": "^3.2"
     },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
+    },
     "scripts": {
         "doctrine": "./vendor/bin/doctrine-migrations",
         "start": "php -S localhost:8080 -t public",
