--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,19 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
+        },
+        "autoload-dev": {
+            "psr-4": {
+                "Tests\\": "tests/"
+            }
         }
     },
     "scripts": {
         "doctrine": "./vendor/bin/doctrine-migrations",
         "start": "php -S localhost:8080 -t public",
         "test": "phpunit"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
